--- a/_pages/about.html
+++ b/_pages/about.html
@@ -19,7 +19,7 @@ permalink: /about/
         <li class="email"><a href="mailto:example.adam@blog.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
       {% endif %}
 
-      {% if site.phone %}
+      <!-- {% if site.phone %}
         <li class="phone"><a href="tel:{{site.phone}}"><i class="fa fa-phone"></i></a></li>
       {% else %}
         <li class="phone"><a href="tel:044 825 5523"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
@@ -36,7 +36,7 @@ permalink: /about/
       {% else %}
         <li class="linkedin"><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
       {% endif %}
-
+ -->
       {% if site.github %}
         <li class="github"><a href="http://github.com/{{site.github}}" target="_blank"><i class="fa fa-github"></i></a></li>
       {% else %}
@@ -61,11 +61,11 @@ permalink: /about/
         <li class="instagram"><a href="https://instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
       {% endif %}
 
-      {% if site.pinterest %}
+      <!-- {% if site.pinterest %}
         <li class="pinterest"><a href="https://pinterest.com/{{site.pinterest}}" target="_blank"><i class="fa fa-pinterest"></i></a></li>
       {% else %}
         <li class="pinterest"><a href="https://pinterest.com/" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-      {% endif %}
+      {% endif %} -->
       </ul>
     </section> <!-- End About Body-->
   </div> <!-- End About Container -->
